Interpret a year like 10 as 2010 and not as 1910 if the now time is near 2010. Add test case for that. Should fix #7257.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@41146 a95241bf-73f2-0310-859d-f6bbb57e9c96